# Declutter-

./: AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
public/failsafe/: EmergencyUnlock.bat
src/: App.css  App.tsx  index.css
src-service/: Cargo.toml
src-service/src/: main.rs  session.rs
src-service/src/enforcer/: mod.rs  overlay.rs  process.rs  restrictions.rs
src-service/src/hooks/: keyboard.rs  mouse.rs
src-service/src/ipc/: protocol.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/windows/: hooks.nsh
src/components/AppBlocker/: AppBlocker.css  AppBlocker.tsx
src/components/Dashboard/: Dashboard.css  Dashboard.tsx
src/components/Gamification/: Garden.css  Garden.tsx  PlantSelector.tsx
src/components/LockScreen/: LockScreen.css  LockScreen.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/Timer/: Timer.css  Timer.tsx
src/hooks/: useSession.ts  useSettings.ts  useStats.ts
src/types/: session.ts
src/utils/: coachEngine.ts  db.ts  sounds.ts
