[package]
name = "declutter-service"
version = "0.1.0"
edition = "2021"
description = "System-level lock enforcement daemon for Declutter"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
ctrlc = "3.4"
windows-service = "0.7.0"

# Official Microsoft Windows FFI crate
[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Security"
]
